--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 
 <head>
-  <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/logo.ico" />
   <link rel="canonical" href="https://jainsavar.com" />
+  <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Savar Jain's Personal Portfolio Website.">
+  <meta name="keywords"
+    content="Savar, Jain, Computer, Science, Software, Engineer, Technology, Westhill, Intern, Student">
+  <meta name="author" content="Savar Jain">
+
+  <meta property='og:title' content="Hi, I'm Savar." />
+  <meta property='og:author' content="Savar Jain" />
+  <meta property='og:image' content='logo.png' />
+  <meta property='og:description' content="My personal portfolio website." />
+  <meta property='og:url' content='https://jainsavar.com/' />
+  <title>Savar Jain</title>
+  <link defer rel="preconnect" href="https://fonts.googleapis.com">
+  <link defer rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link defer
+    href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Zilla+Slab:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+    rel="stylesheet">
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -23,7 +39,6 @@
 
   <!-- Fontawesome  -->
   <script defer src="https://kit.fontawesome.com/68e357ed07.js" crossorigin="anonymous"></script>
-  <title>Savar Jain</title>
 </head>
 
 <body>
