--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,14 @@
   <title>Savar Jain</title>
   <link defer rel="preconnect" href="https://fonts.googleapis.com">
   <link defer rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link defer
-    href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Zilla+Slab:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+  <link async
+    href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
+  <link async
+    href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Quicksand:wght@400;500;600;700&display=swap"
+    rel="stylesheet">
+
+
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 </head>
 
