--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Savar Jain's Personal Portfolio Website.">
   <meta name="keywords"
-    content="Savar, Jain, Computer, Science, Software, Engineer, Technology, Westhill, Intern, Student">
+    content="Savar, Jain, Computer, Science, Software, Engineer, Technology, Westhill, Intern, Student, Datadog, MongoDB, Amazon, Zillow, Synchrony">
   <meta name="author" content="Savar Jain">
   <meta property='og:title' content="Hi, I'm Savar." />
   <meta property='og:author' content="Savar Jain" />
@@ -31,12 +31,6 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <script>
-    const hostname = location.hostname;
-    if (hostname.indexOf('jainsavardotcom.web.app') > -1) {
-      location.replace("https://jainsavar.com");
-    }
-  </script>
   <div id="root"></div>
 </body>
 
